--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dom part 1</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <!-- <link rel="stylesheet" href="styles/style.css"> -->
     <style>
         h1{
             color: aqua;
@@ -13,23 +13,119 @@
 </head>
 <body>
     <main>
-        <h1>
+        <h1 class="color">
         welcome to javascript
         </h1>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veritatis, cumque!</p>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veritatis, cumque!</p>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veritatis, cumque!</p>
+        <ul>
+            <li id="id-title">jalali</li>
+            <li>halali</li>
+            <li class="title">kamali</li>
+            <li>batali</li>
+        </ul>
+        <ol>
+            <li class="forign">burger</li>
+            <li class="forign">pizza</li>
+            <li>pasta</li>
+            <li>chao min</li>
+            <li>frid rice</li>
+        </ol>
+        <section class="all-selector">
+            <h1 class="get-selector">header</h1>
+
+            <h1 id="header-title">header title</h1>
+
+            <p >Lorem ipsum dolor sit amet, <span >consectetur adipisicing elit.</span> Quidem, dicta labore nesciunt autem voluptate eos ex perspiciatis unde itaque debitis, architecto nulla excepturi molestias nihil aliquid facere vel sequi! Dicta.</p>
+           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem, dicta labore nesciunt autem voluptate eos ex perspiciatis unde itaque debitis, <span>architecto nulla excepturi</span> molestias nihil aliquid facere vel sequi! Dicta.</p>
+
+           <section id="nameLI">
+            <h1>players</h1>
+            <ul id="player-list">
+                <li>messi</li>
+                <li>ronaldo</li>
+                <li>mabappe</li>
+                <li>pele</li>
+            </ul>
+           </section>
+ 
+        </section>
     </main>
 <!-- html file js 1 type -->
     <script>
-        console.log("Hello javascript")
-        console.log("Marhaba js ke maro thaba")
+        // console.log("Hello javascript")
+        // console.log("Marhaba js ke maro thaba")
+
+        const student={
+            name:"ami",
+            study:function(subject){
+                // console.log("subject",subject)
+            }
+        }
+        // document kora niyom
+        const documentLi=document.getElementsByTagName('h1')
+        // console.log(documentLi)
+
+
+        const paragraphTags=document.getElementsByTagName('p')
+        // console.log(paragraphTags)
+        for(const p of paragraphTags){
+            // console.log(p.innerText)
+        }
+
+        // <<<<>>>>>id tag<<<<>>>>>>>
+        // const nameId=document.getElementById('id-title')
+        // console.log(nameId)
+        // console.log(nameId.innerText)
+        // for(const name of nameId){
+        //     console.log(name.innerText)
+        // }
+
+        // <<<document class >>>>>>>
+            const element=document.getElementsByClassName("forign");
+            // console.log(element)
+            for(const allGet of element){
+                // console.log(allGet.innerText)
+            }
+
+
+            // <<<quyary selector>>>>>>
+                // const spanElement = document.querySelectorAll(".all-selector p span");
+                // for(const element of spanElement){
+                //     console.log(element.innerText)
+                // }
+
+                //          const allElement = document.querySelectorAll(".all-selector div p");
+                // for(const element of allElement){
+                //     console.log(element.innerText)
+                // }
+    //   <<<<<qureySelector>>>>>>>>>
+        // const getSelector=document.querySelector(".all-selector div p")
+        //         for(const elements of getSelector){
+        //             console.log(elements)
+        //         }
+
+
+//   <<<<<<style add kora >>>>>>>>>>>
+    const h1Color=document.getElementsByClassName('color')
+    // console.log(h1Color);
+
+    // h1Color
+    // for(const style of h1Color){
+    //     console.log(style.style.border='2px')
+    // }
+
+
+    
+ 
+
+
     </script>
 <!-- second type -->
  <script src="js/hello.js"></script>
 
  <script src="script/index.js"></script>
-
-
+ <script src="js/newChile.js"></script>
 </body>
 </html>
