--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     </style>
 </head>
 <body>
-    <main>
-        <h1 class="color">
+    <main id="main-container">
+    <section>
+             <h1 class="color">
         welcome to javascript
         </h1>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veritatis, cumque!</p>
@@ -32,7 +33,8 @@
             <li>chao min</li>
             <li>frid rice</li>
         </ol>
-        <section class="all-selector">
+    </section>
+    <section class="all-selector">
             <h1 class="get-selector">header</h1>
 
             <h1 id="header-title">header title</h1>
@@ -48,7 +50,7 @@
                 <li>mabappe</li>
                 <li>pele</li>
             </ul>
-           </section>
+        </section>
  
         </section>
     </main>
@@ -127,5 +129,6 @@
 
  <script src="script/index.js"></script>
  <script src="js/newChile.js"></script>
+ <script src="js/append.js"></script>
 </body>
 </html>
